demo/deploy-teste.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: teste
  name: teste
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teste
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: teste
    spec:
      containers:
      - image: k8s.gcr.io/echoserver:1.10
        name: teste
        resources: {}
status: {}
