demo/service-teste.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: teste
  name: teste-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: teste
  sessionAffinity: None
  type: ClusterIP
